--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Linting
         run: yarn lint
 
+      - name: Type check
+        run: yarn type-check
+
       - name: Test
         run: yarn test
 
