--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/boxicons-solid": "^10.38.0",
     "@styled-icons/fa-brands": "^10.38.0",
+    "graphql": "^16.4.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
     "polished": "^4.2.2",
