--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,8 @@ jobs:
       - name: Linting
         run: yarn lint
 
-      - name: Type check
+      - name: Type-check
         run: yarn type-check
 
       - name: Test
-        run: yarn test
-
-      - name: Build
-        run: yarn build
+        run: yarn test:ci
