--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@styled-icons/boxicons-solid": "^10.38.0",
     "@styled-icons/fa-brands": "^10.38.0",
     "graphql": "^16.5.0",
+    "lodash.xor": "^4.5.0",
     "next": "12.2.2",
     "next-pwa": "^5.5.4",
     "polished": "^4.2.2",
@@ -56,6 +57,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.5",
+    "@types/lodash.xor": "^4.5.7",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.9",
     "@types/react-slick": "^0.23.10",
