--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/react": "^6.4.22",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.5",
     "@types/lodash.xor": "^4.5.7",
