--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash.xor": "^4.5.0",
     "next": "12.2.2",
     "next-pwa": "^5.5.4",
+    "nextjs-progressbar": "^0.0.14",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
