--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@styled-icons/boxicons-solid": "^10.38.0",
     "@styled-icons/fa-brands": "^10.38.0",
     "graphql": "^16.5.0",
+    "joi": "^17.6.0",
     "lodash.xor": "^4.5.0",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
